# nuke

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  build-release.bat  build.bat  vcpkg.json
.github/workflows/: build.yml
nuke-cli/: Cargo.toml
nuke-cli/src/: default.rs  download.rs  install.rs  list.rs  main.rs  scan_bin.rs  setup.rs
nuke-launcher/: Cargo.toml
nuke-launcher/src/: main.rs
nuke-shared/: Cargo.toml
nuke-shared/src/: binary.rs  lib.rs  node.rs  path.rs
